--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 		<div id="player" class="moveable"></div>
 	
 	</div>
+	<!-- Dropdown for Mario/Luigi choice -->
+	<div class="dropdown">
+		<button onclick="contentShowToggle()" class="dropbtn">Character</button>
+		<div id="characterDropdown" class="dropdown-content">
+			Mario
+			Luigi
+		</div>
+	</div>
 	<!-- sounds -->
 	<audio id="jump-sound">
 		<source src="./sounds/jump.mp3" type="audio/mpeg">
