--- a/index.html
+++ b/index.html
@@ -6,17 +6,26 @@
 	<link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
 <body >
-	<div id="game">
-		
-		<div id="player" class="moveable"></div>
+<div id="game">
+
+ 		<div id="player" class="moveable"></div>
+ 	
+ 	</div>
+
+ 	<!-- sounds -->
+ 	<audio id="jump-sound">
+ 		<source src="./sounds/jump.mp3" type="audio/mpeg">
+ 	<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+ 	<script src="./js/app.js" type="text/javascript"></script>
 	
+	<!-- Dropdown for Mario/Luigi choice -->
+	<div class="dropdown">
+		<button onclick="contentShowToggle()" class="dropbtn">Character</button>
+		<div id="characterDropdown" class="dropdown-content">
+			<input id="marioButton" value="Mario" onclick="chooseCharacter('mario');" >
+			<input id="luigiButton" value="Luigi" onclick="chooseCharacter('luigi');" />
+		</div>
 	</div>
-	<!-- sounds -->
-	<audio id="jump-sound">
-		<source src="./sounds/jump.mp3" type="audio/mpeg">
-	</audio>
-	<!-- scripts -->
-	<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-	<script src="./js/app.js" type="text/javascript"></script>
-</body>
-</html>
+ </body>
+-</html>
++</html>
